--- a/src/styles/components/_title.css
+++ b/src/styles/components/_title.css
@@ -11,12 +11,12 @@
   height: 240px;
 
   @media screen and (min-width: 768px) {
-    font-size: var(--font-title-mobile);
+    font-size: var(--font-title-min);
     max-width: 200px;
   }
 
 
-  @media screen and (min-width: 900px) {
+  @media screen and (min-width: 800px) {
     font-size: var(--font-display-min);
   }
 
